add intuition for remaining mediator to-dos

--- a/notes.tex
+++ b/notes.tex
@@ -666,7 +666,12 @@ Parameterization 6: $We > W1 > W0$, $54 > 7.33 > 7$. Mediator optimally chooses 
 					\item Need to say clearly that $e=1$ doesn't work in a lot of situations
 					\item Mediator with $e=0$ can be better than CSE with $e=0$. Need to say why this is
 						\begin{itemize}
-							\item If you can sustain $e=1$ with no mediator, mediator can still be better
+							\item Two differences: Mediator gets you some value of the gift $pTeg_M$; gift under mediator typically has to be larger--it takes more to disincentivize low type from lying because the payoff is better
+						\end{itemize}
+					\item If you can sustain $e=1$ with no mediator, mediator can still be better
+						\begin{itemize}
+							\item Again, if mediator is good, it's REALLY good.
+							\item The benefit of $eg_M$ is muted versus $g^1$, but there is no harm from $g_M$ while there is harm from $g^1$. Cost of gift will always be larger under mediator because it goes to infinity at the optimal $e$
 						\end{itemize}
 					\item Sufficient condition for where welfare goes to positive $\infty$ to the left of the $e$ asymptote
 						\begin{itemize}
