revise for \de issue through no concessions separting eqm

--- a/draft.tex
+++ b/draft.tex
@@ -133,50 +133,50 @@ Here $T\geq0$ represents the benefit from the other country playing Trust. $D\ge
 Payoffs for a country are the sum the stage game payoffs, discounted by $\delta_i$. For example, if both parties play ``Trust'' in every period, the payoff for a player $i$ is $\sum_{t=1}^\infty \de_i^{t-1} T = \frac{T}{1-\de_i}.$ Parameters are common knowledge with the exception of $\delta_i$, which is country $i$'s private information. %Countries' utility is calculated as ex interim utility (Holmstrom and Myerson 1983),  i.e. when countries know their own type but not that of the other country. Depending on parameters, multiple equilibria are often possible. 
 We will take the measure of social welfare, and thus the determinant of the optimal equilibrium, to be the sum of participating high types' expected utilities.
 
-The assumption $T>W-D$ ensures that the joint payoffs from (Trust, Trust)---which we will refer to as ``Peace''---are the highest among all the stage-game action profiles. If $\delta_i$ is high enough for both countries, the ``Peace'' outcome can be sustained with a grim trigger punishment threat; that is, both countries play ``Trust'' as long as the other plays ``Trust'' and play ``Fight'' if there is ever a deviation from ``Trust.'' We will refer to the stage-game Nash Equilibrium of (Fight, Fight) as ``War.''
+The assumption $T>W-D$ ensures that the joint payoffs from (Trust, Trust)---which we will refer to as ``Peace''---are the highest among all the stage-game action profiles. If $\delta_i$ is high enough for both countries, the ``Peace'' outcome can be sustained no concessions and a grim trigger punishment threat; that is, both countries play ``Trust'' as long as the other plays ``Trust'' and play ``Fight'' if there is ever a deviation from ``Trust.'' We will refer to the stage-game Nash Equilibrium of (Fight, Fight) as ``War.''
 
 For a Peace equilibrium to exist, $\delta_i$ must be high enough for each country so that sustaining Peace is more attractive than deviating. 
-The threshold $\delta_i^*$ needed is \be
- \delta_i^* = \frac{W}{T+D}
+The threshold needed is \be
+ \delta^{gt} = \frac{W}{T+D}
  \ee
-We differentiate the high and low types by assuming $\delta_h> \delta_i^*$ and $\delta_l < \delta_i^*$. This implies that, with perfect information about the $\delta_i$'s, two high types---and only two high types---can sustain the Peace outcome in a simple repeated game.
+where the superscript $gt$ stand for `grim trigger.' Here, as in each further iteration of the model, we define a high type as a country who prefers to play the ``Peace'' equilibrium, i.e. $\delta_h^{gt} \geq \delta^{gt}$. Any country with $\delta_l^{gt} < \delta^{gt}$ is a low type. This means that two high types---and only two high types---can sustain the Peace outcome in a simple repeated game.
 
 \section{Analysis of Benchmark Cases}
 \label{sec:bench}
-When countries are faced with uncertainty about each other's motives, they can proceed in several different ways. There are three basic types of equilibria that this analysis will examine.\footnote{If the discount factor for the high type ($\delta_h$) exceeds the cutoff found in expression (1), there are many types of equilibria; consider for instance oscillating every other period between Peace and War with a grim trigger War threat. In this paper, we are not interested in these equilibria because they are not as realistic for applications to conflict scenarios. These are also always payoff dominated by at least one of the other equilibria discussed, so are not attractive.} The Appendix provides a thorough analysis of the various equilibria as well as all proofs for this section. 
+When countries are faced with uncertainty about each other's motives, they can proceed in several different ways, including giving concessions in order to signal their willingness and ability to make peace. There are three basic types of equilibria that this analysis will examine.\footnote{If the discount factor is high enough, there are many types of equilibria. Consider for instance oscillating every other period between Peace and War with a grim trigger War threat. In this paper, we are not interested in these equilibria because they are not as realistic for applications to conflict scenarios. These are also always payoff dominated by at least one of the other equilibria discussed and thus 	are not attractive.} The Appendix provides a thorough analysis of the various equilibria as well as all proofs for this section. 
 \\
 \\
 {\bf \emph{Pooling equilibrium}\\}
 \vskip-.2in
 In the \emph{pooling equilibrium}, both countries do not give concessions in period 0, then always play Fight in every period beginning with period 1. 
-Countries continue to doubt, doing nothing to bridge the credibility gap, and thus not cooperating. This \emph{pooling equilibrium} is likely to happen when countries are in long-set patterns of distrust. Active fighting is not necessary; remaining outside of a state of peace is all that is required.  See Lemma~\ref{lemma:1} and Lemma~\ref{lemma:2} in the appendix for a formal characterization of this type of equilibrium. 
+Countries continue to doubt, doing nothing to bridge the credibility gap, and thus not cooperating. This \emph{pooling equilibrium} is likely to happen when countries are in long-set patterns of distrust. Active fighting is not necessary; remaining outside of a state of peace is all that is required.  See Lemma~\ref{lemma:1} and Lemma~\ref{lemma:2} in the Appendix for a formal characterization of this type of equilibrium. 
 
 Cyprus' civil war is a good example of the pooling equilibrium where neither side is taking actions to move things forward. While both sides posture that they want peace, and while there has been some lessening of tensions, very few concrete actions have been taken that move the sides toward settlement. This conflict is a stalemate. 
 
 Sri Lanka is another example. While the government has finally won the war of secession, it still refuses to address grievances of the minorities and leaves the conflict still unresolved. Other prominent examples of this pooling equilibrium include Israel and its neighbors, North and South Korea, Greece and Turkey, and a multitude of other long-lasting conflicts. The mistrust of the other party is perhaps justified; indeed if one party did take the first step and give a concession first, they may be taken advantage of. 
 
-In any case, these long lasting stalemates are the types of conflict which are most appropriate for mediator involvement. Without a third party, there is little hope of overcoming mistrust. In some sense then, these are the cases that are most interesting because the international community might play a positive role. A mediator will be added to the model later to illustrate exactly how this role can be played. 
+Without a third party, there is little hope of overcoming mistrust. These long lasting stalemates are the types of conflict which are most appropriate for mediator involvement. A mediator will be added to the model later to illustrate exactly how mediation can help achieve peace in this context. In some sense, these are the cases that are most interesting because the international community might play a positive role. 
 \\
 \\
 {\bf \emph{No-Concessions Separating Equilibrium}\\}
 \vskip-.2in
-The other two equilibria are separating equilibria in which low types and high types have different strategies. In a \emph{no-concessions separating equilibrium}, no concessions are given by either type in period 0. In period 1, high types play Trust while low types play Fight. So long as there are two high types, as revealed by their period 1 play, both countries continue to play Trust in all following periods. Otherwise, both countries play Fight in all following periods. 
+The other two equilibria on which we focus are separating equilibria in which low types and high types have different strategies. In a \emph{no-concessions separating equilibrium}, no concessions are given by either type in period 0. In period 1, high types play Trust while low types play Fight. So long as there are two high types, as revealed by their period 1 play, both countries continue to play Trust in all following periods. Otherwise, both countries play Fight in all following periods. 
 
 \begin{theorem}
-	When low types give no concessions in period 0 and always play Fight thereafter, the strategy of not giving concessions in period 0, then playing Trust unless the other country defects to Fight is an equilibrium strategy for high types if $\delta_h \geq \frac{W}{(1-p)W + p(T + D)}$.
+	Assume $\delta_h \geq \frac{W}{(1-p)W + p(T + D)}=\de^{nc}$. A subgame perfect Nash equilibrium exists in which low types give no concessions in period 0 and always play Fight and the high types give no concessions in period 0 and play Trust unless the other country defects to Fight.
 	\label{theorem:1}
 \end{theorem}
-\emph{Proof}: See appendix.
+\emph{Proof}: See Appendix.
 \\
 In this equilibrium, two mutually distrustful countries go ahead and behave as if they trust anyway, taking a risk. This generally will happen when the result of trusting and then being betrayed is not catastrophic, or the odds of such a scenario are small. This is representative of a case where countries have suspicions about each other, but proceed anyway. 
 
-Examples of a \emph{no-concessions separating equilibrium} are most likely to be those where countries have traditionally had good relations but something has recently come in the way. Certain relationships between the USA and countries that its wikileaks alienated -- such as Italy -- would be an example. Italy essentially laughed off the criticisms and reassured the USA of its commitment to their relationship. Warsaw Pact countries generally allowed the USSR similar leeway; it was better to have occasionally imperfect cooperation than conflict. Certain things can disrupt trust without completely derailing cooperation. 
+Examples of a \emph{no-concessions separating equilibrium} are most likely to be those where countries have traditionally had good relations but something has recently come in the way. Certain relationships between the USA and countries that its wikileaks alienated -- such as Italy -- would be an example. Italy essentially laughed off the criticisms and reassured the USA of its commitment to their relationship. Warsaw Pact countries generally allowed the USSR similar leeway; it was better to have occasionally imperfect cooperation than conflict. Some events can disrupt trust without completely derailing cooperation. 
 
-Of course, it is possible that in a \emph{no-concessions separating equilibrium} one country can take advantage of the other.  It can be argued that indeed that did happen in the Warsaw Pact cases; the Eastern Bloc countries were first exploited before the fall of the iron curtain; eventually this led to a steely relationship between many of those countries and Russia that exists to this day in Poland, Lithuania and other countries. 
-
-Though it will not be modeled here, a stochastic component -- when countries occasionally unilaterally defect -- can explain why powerful countries like the USSR more often ``get away'' with cheating: the payoffs to the relationship are not symmetric. Losing the USA or USSR as an ally is much more devastating for a satellite country than vise versa, therefore big countries can have their alliances and take advantage of them too.
+Of course, it is possible that one country can take advantage of the other in a \emph{no-concessions separating equilibrium}.  It can be argued that indeed that did happen in the Warsaw Pact cases; the Eastern Bloc countries were first exploited before the fall of the iron curtain; eventually this led to a steely relationship between many of those countries and Russia that exists to this day in Poland, Lithuania and other countries. 
 \\
 \\
+
+%Though it will not be modeled here, a stochastic component -- when countries occasionally unilaterally defect -- can explain why powerful countries like the USSR more often ``get away'' with cheating: the payoffs to the relationship are not symmetric. Losing the USA or USSR as an ally is much more devastating for a satellite country than vise versa, therefore big countries can have their alliances and take advantage of them too.
 {\bf \emph{Concessions Separating Equilibrium}\\}
 \vskip-.2in
 The third option is for distrustful countries to use concessions as a way of building trust. In the model this is the \emph{concessions separating equilibrium}. This equilibrium is costly, but can be worth the investment if the other country also cooperates. It is also not as risky as cooperating without concessions, as in the previous equilibrium. The concessions are given before more substantive actions, thus concessions are a costly signal that the other country is serious about cooperating. Most agreements come with concessions, and in many cases, though not all, they are used as signals. The goal is to use this option to avoid continual distrust; we will show in Section 5 that a mediator is one way of enabling this solution. 
@@ -195,15 +195,15 @@ Equilibrium payoffs beginning from round 1 are now easily described by noting on
 	In a separating equilibrium, low types do not give a concession. Cheap talk does not allow for a concessions separating equilibrium.
 	\label{lemma:3}
 \end{lemma}
-\emph{Proof:} See appendix.\\
+\emph{Proof:} See Appendix.\\
 
 \begin{theorem}
 	In the best concessions separating equilibrium, high types give the smallest concession necessary to separate. Equilibria with higher concessions yield strictly lower payoffs.
 	\label{theorem:2}
 \end{theorem}
-\emph{Proof:} See appendix.
+\emph{Proof:} See Appendix.
 
-This smallest concession is denoted $g_h^*$ and is calculated in equation (9) in the appendix to be $p(T+D).$
+This smallest concession is denoted $g_h^*$ and is calculated in equation (9) in the Appendix to be $p(T+D).$
 
 This `best' concessions separating equilibrium, where `best' is from the standpoint of high-type welfare, is justified by appeal to the Intuitive Criterion equilibrium refinement, in which out of equilibrium beliefs put zero weight on types that can never gain from deviating.
 
@@ -295,7 +295,7 @@ Before turning to our main result for the case where the material value of conce
 		Assume the high types are not patient enough to separate without concessions and that concessions have material value that can be destroyed. There are parameters under which the optimal equilibrium is a separating equilibrium in which concessions are inefficient.
 	\label{theorem:4}
 \end{theorem}
-\emph{Proof}: See appendix.
+\emph{Proof}: See Appendix.
 
 Inefficient concessions are optimal under low $p$ (there's a good chance of facing a low type who will use the concession against you) as well as when $\de_l$ is low ($g^*$ is decreasing in the patience of the low type, as a larger concession is required to deter an impatient low-type from being untruthful). 
 
@@ -390,7 +390,7 @@ This paper shows that inefficient concessions may be used to achieve peace when 
 	From period 1 on, playing fight in all periods is the only sequentially rational strategy for low types regardless of their beliefs of the other country's type and strategy.
 	\label{lemma:2}
 \end{lemma}
-\emph{Proof}: As $D\geq0$ and $W\geq0$ the dominant stage game action for all types is to play Fight. Playing Trust is only possible in equilibrium where there is punishment for playing Fight. The minimax payoff is $W-D$, and punishing a country by playing it every period is the worst possible punishment, hence it gives the greatest potential for a country to be given incentives to play Trust. Low types, with $\delta_l < \delta^*$ achieve a higher payoff from being punished than they do from cooperation, so they cannot be given incentives to play anything except Fight. \hfill $\blacksquare$\\
+\emph{Proof}: Because $W\geq0$, the dominant stage game action for all types is to play Fight. Playing Trust is only possible in equilibrium where there is punishment for playing Fight. The minimax payoff is $W-D$, and punishing a country by playing it every period is the worst possible punishment, hence it gives the greatest potential for a country to be given incentives to play Trust. Low types, with $\delta_l < \delta^{gt}$ achieve a higher payoff from being punished than they do from cooperation, so they cannot be given incentives to play anything except Fight. \hfill $\blacksquare$\\
 
 One high type equilibrium strategy is to pool with the low types and always play Fight. If both the low and high type of player $j$ choose the strategy that gives no concessions and always plays fight, Lemma~\ref{lemma:2} shows that the low-type of player $i$ best responds by always playing Fight. The high-type of player $i$ is made strictly better off by playing Fight in each period given player $j$'s behavior by Lemma~\ref{lemma:1}. Given that the stage-game equilibrium will be (Fight,Fight), there is no incentive to give a concession in period 0 because concessions are costly and signaling one's type can give no benefit in this equilibrium. Types pool by never giving concessions and always playing Fight. 
  %add intro about the 3 types of equilibria. 
@@ -398,20 +398,33 @@ One high type equilibrium strategy is to pool with the low types and always play
  \\
  {\bf \emph{No-Concessions Separating Equilibrium}}
  
- Let us examine the conditions for a separating equilibrium held in place by a grim trigger.\\
- \\
- \emph{Proof of Theorem \ref{theorem:1}}:\\
-Countries with the equilibrium strategy to play Trust in the first round reveal themselves as a high type as per Lemma~\ref{lemma:2}. This will be incentive compatible for high types if the expected payoffs from this strategy are greater than the payoffs from deviating against someone playing the pooling (always Fight) strategy. If both countries play Trust in a period, a Peace equilibrium takes place and both countries continue to play peace in every period with the grim trigger threat of the War equilibrium. Low types play Fight in the first period, so a high type that observed Fight being played would respond by playing Fight in period 2 and in all future periods.  If the potential advantages of Peace are large enough to outweigh the risks of encountering a low type in expected utility terms, a high type will be given incentives to play Trust in the first round rather than Fight. To play Trust, the following must be satisfied:%Make clearer language!!!!!!!
-%FUTURE WORK ON DELY OF PEACE- IF PEACE WILL E THERE, YOU MIGHT BE VERY RISK AVERSE TO GETTING SCREWED BY THE LOW TYPE SO KEEP PUTTING OFF THE RISKY FIRST TRUST ROUND
+ We examine the conditions for a separating equilibrium held in place by a grim trigger.
+ 
+ \noindent{\emph{Proof of Theorem \ref{theorem:1}}:\\
+Playing Trust in the first period and thereafter as long as Trust has always been played will be incentive compatible for high types if the expected payoffs from this strategy are greater than the payoffs from playing Fight in the first period and then every period thereafter by the one-shot deviation principle. If both countries play Trust in a period, a Peace equilibrium takes place and both countries continue to play peace in every period with the grim trigger threat of the War equilibrium. Low types play Fight in the first period, so a high type that observed Fight being played would respond by playing Fight in period 2 and in all future periods. A country plays Trust if and only if the following condition is satisfied:
 \be
-p(\frac{T}{1- \delta_h}) +(1-p)({-D}+\frac{\delta_h(W-D)}{1- \delta_h} )\geq p (T + W + \frac{\de_h}{1-\de_h}(W-D)) +(1-p)\frac{W-D}{1- \delta_h}
+  p\left(\frac{T}{1- \delta_h}\right) +(1-p)\left({-D}+\frac{\delta_h(W-D)}{1- \delta_h} \right)\geq p \left(T + W + \frac{\de_h}{1-\de_h}(W-D)\right) +(1-p)\frac{W-D}{1- \delta_h}
 \ee
-
-This simplifies to the condition of high types choosing Trust in period 1 if and only if: 
+Simplifying, we have
+\be
+  p\left(\frac{T}{1- \delta_h}\right) \geq p \left(T + W + \frac{\de_h}{1-\de_h}(W-D)\right) +(1-p)W
+\ee
+\be
+  pT \geq p \left((1-\de_h)(T + W) + \de_h (W-D)\right) + (1-\de_h)(1-p)W
+\ee
+\be
+  pT \geq pT -p\de_hT +pW -p\de_h W + p \de_h W -p \de_h D  + W -\de_h W -pW + p\de_hW
+\ee
+\be
+  p\de_hT +p \de_h D + \de_h W - p\de_hW  \geq W 
+\ee
 \be
 \delta_h \geq \frac{W}{(1-p)W + p(T+D)}
 \ee
-Since under some parameter sets this condition will hold, this type of separating equilibrium can exist. Let us refer to such an equilibrium as a  \emph{no-concessions separating equilibrium}, since the high types have sufficient incentive to separate under appropriate parameter values even without concessions being given in period 0. \hfill $\blacksquare$
+
+If the potential advantages of Peace are large enough to outweigh the risks of encountering a low type in expected utility terms, a country with $\de_h \geq \frac{W}{(1-p)W + p(T+D)} = \de_h^{nc}$ has the incentive to play Trust in the first round rather than Fight. Any player with $\de < \de_h^{nc}$ has the incentive---by this same inequality---to play Fight in each period even if the other country plays Trust. Thus we call these countries low types for purposes of this equilibrium. \hfill $\blacksquare$\\
+
+This type of separating equilibrium can exist for some sets of parameters. Since the high types have sufficient incentive to separate under appropriate parameter values even without concessions being given in period 0, we refer to such an equilibrium as a \emph{no-concessions separating equilibrium}. This is why the threshold patience level for this type of equilibrium is labeled $\de_h^{nc}$.
 \\
 %This section could use some cleanup and streamlining
 \\
